prefexed css class names with cs-

--- a/example/index.html
+++ b/example/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
   
-  <div class="content">
-    <div class="indicator"></div>
-    <div class="view">
+  <div class="cs-content">
+    <div class="cs-indicator"></div>
+    <div class="cs-view">
       <aside>Scrolling</aside>
       <p>
 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eget purus libero. Nulla ut pretium libero. Vestibulum adipiscing quam ac sapien scelerisque, a posuere sem dictum. Ut aliquet lectus ut nibh dapibus cursus. Donec quam libero, aliquam nec aliquam quis, feugiat quis metus. Phasellus ac orci mauris. Cras hendrerit suscipit nisi, eget varius mi condimentum vel. Donec id libero magna. Nam scelerisque nisi tellus, ut cursus ipsum imperdiet eget. Donec porttitor non lectus ut lacinia. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Ut egestas commodo facilisis. Etiam orci nibh, pellentesque sed ipsum consequat, faucibus tempus augue. Cras iaculis diam in auctor bibendum.
