--- a/example/index.html
+++ b/example/index.html
@@ -56,6 +56,6 @@ Vestibulum tincidunt vestibulum turpis, in scelerisque nibh. Cras nunc metus, cu
 <p>(END OF TEXT)</p>
     </div>
   </div>
-  <script type="text/javascript" src="customscroll.js"></script>
+  <script type="text/javascript" src="../customscroll.js"></script>
 </body>
 </html>
